[tool.poetry]
name = "blockchain-python"
version = "0.1.0"
description = ""
authors = ["Daniel Arvelini Nordhausen <danarvelini@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
